Bug 690469 - ShadowThebesLayer Init/Swap API rework. r=cjones